[package]
name = "daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
inferno.workspace = true

wgpu.workspace = true
winit.workspace = true
egui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[workspace]
resolver = "2"

members = [".", "inferno"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Guilherme Menezes <guilhermeladins@gmail.com>"]
license = "MIT"

[workspace.dependencies]
daemon = { version = "0.1", path = "." }
inferno = { version = "0.1", path = "inferno" }

wgpu = "0.19"
egui = "0.25.0"
winit = "0.28"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "tracing",
    "env-filter",
] }
