[package]
name = "inferno"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu.workspace = true
winit.workspace = true
egui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
